# pylon

./: Cargo.toml  README.md  build.rs  install.sh
.squall/memory/: index.md  models.md
.squall/raw/: 1773414430119_8074_0_gpt-5_4.json
.squall/reviews/: 1773430719148_69399_0.json  1773430719148_69399_0_findings.json
Claude Cockpit.app/Contents/: Info.plist
src/: app.rs  config.rs  error.rs  event_policy.rs  lib.rs  main.rs  titlebar.rs
src/gpu/: atlas.rs  context.rs  mod.rs  renderer.rs  window.rs
src/gpu/shaders/: cell.metal
src/grid/: cell.rs  mod.rs  row.rs  storage.rs
src/primitives/: cache_aligned.rs  dirty_rows.rs  frame_state.rs  mod.rs  waker.rs  write_once.rs
src/pty/: mod.rs  reader.rs  spawn.rs
src/session/: manager.rs  mod.rs  renderer.rs
src/sidebar/: layout.rs  mod.rs  sessions.rs  state.rs  tracker.rs
src/sidebar/discovery/: jsonl.rs  mod.rs  poller.rs  tab_session.rs
src/sidebar/usage/: api.rs  config.rs  mod.rs  poller.rs
src/vt/: handler.rs  mod.rs  parser.rs  state.rs
