[package]
name = "claude-cockpit"
version = "0.1.0"
edition = "2021"
description = "Metal-accelerated terminal emulator with native Claude Code integration"
license = "MIT"
build = "build.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

[dependencies]
winit = "0.30"
raw-window-metal = "1.0"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSError"] }
objc2-metal = "0.3"
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer", "CALayer", "objc2-metal"] }
dispatch2 = "0.3"
block2 = "0.6"
core-text = "20"
core-graphics = "0.23"
core-foundation = "0.9"
etagere = "0.2"
vte = "0.15"
nix = { version = "0.29", default-features = false, features = ["fs", "term", "ioctl", "process", "signal"] }
mio = { version = "1", features = ["os-poll", "os-ext"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
keyring = { version = "3", features = ["apple-native"] }
toml = "0.8"

[build-dependencies]
cc = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
